# hvac_control

./: .gitignore  .gitmodules  fetch_logs.sh  fresh_air_control.code-workspace  hvac_control.code-workspace  parse_logs.py  t
boards/: 16mb_ota.csv  esp32s3-n16r2.json
case/: 20240705-label-plate.dxf  controller_bottom.stl  controller_bottom_v2.stl  controller_bottom_v3.stl  controller_top.stl  controller_top_v2.stl  controller_top_v3.stl  label plate.dxf  label_alignment.dxf  touch_panel_bracket.dxf
comms_test/: CMakeLists.txt
components/: .clang-format  lv_conf.h
components/wifi/: .clang-format  CMakeLists.txt  idf_component.yml  release.sh
components/wifi/include/: AbstractOTAClient.h  AbstractWifi.h  BaseMqttClient.h  ESPOTAClient.h  ESPWifi.h  FakeOTAClient.h  FakeWifi.h  NetworkTaskManager.h  OtaTask.h  remote_logger.h
components/wifi/src/: BaseMqttClient.cpp  ESPOTAClient.cpp  ESPWifi.cpp  NetworkTaskManager.cpp  OtaTask.cpp  remote_logger.cpp
controller/: CLAUDE.md  CMakeLists.txt  README  README.md  build.sh  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3  sdkconfig.esp32s3.old  sdkconfig.old
controller/lib/ui/: CMakeLists.txt  UIManager.cpp  UIManager.h  filelist.txt  library.json  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
controller/lib/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.h  ui_comp_setting_header.c  ui_comp_setting_header.h
controller/lib/ui/screens/: ui_Boot.c  ui_CO2.c  ui_Equipment.c  ui_Fan_speed_override.c  ui_Home.c  ui_Restart.c  ui_Schedule.c  ui_Settings.c  ui_Temp_limits.c  ui_Temp_offsets.c  ui_Thermostat.c  ui_Wifi.c
controller/lib/ui/src/: UIManager.h  ui.h  ui_events.cpp
controller/lib/ui/src/components/: ui_comp.h  ui_comp_hook.c  ui_comp_setting_header.h
controller/lib/ui/src/screens/: ui_CO2.c  ui_Fan_speed_override.c  ui_Home.c  ui_Schedule.c
eagle/: Adafruit 2.8 inch TFT w Capacitive Touch.brd  eagle.epf
exhaust_ctrl/: platformio.ini
fancoil_makeup_aux/: README.md  platformio.ini
fresh_air_control/: platformio.ini
fresh_air_control_broan/: platformio.ini
pid_simulator/: Pipfile  conversions.py  hvac.py  process_weather.py  room.py  setpoints.py  simulation.py  simulator.py  temp_inputs.py
zone_controller/: CLAUDE.md  CMakeLists.txt  README  README.md  build.sh  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32s3  (+1 more)
zone_controller/test/: CMakeLists.txt  run_tests.sh  test_main.cpp  test_out_ctrl.cpp  test_valve_state_manager.cpp  test_zc_app.cpp
zone_controller/test/helpers/include/: FakeModbusClient.h  FakeOutIO.h  FakeUIManager.h  FakeZCHomeClient.h
zone_controller/test/test_out_ctrl/: test_out_ctrl.cpp
(+444 files in other folders)
